--- a/templates/authors.html
+++ b/templates/authors.html
@@ -2,13 +2,13 @@
 
 
 {% block title %}
-  All authors
+  所有作者
 {% endblock %}
 
 
 {% block top_center %}
   <h1>
-      <a href="{{ SITEURL }}/{{ AUTHORS_SAVE_AS }}" rel="bookmark" title="Permalink to author list">Authors</a>
+      <a href="{{ SITEURL }}/{{ AUTHORS_SAVE_AS }}" rel="bookmark" title="Permalink to author list">作者</a>
   </h1>
 {% endblock %}
 
