--- a/templates/search.html
+++ b/templates/search.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block title %}
-  Seach {{ super() }}
+  搜索 {{ super() }}
 {% endblock title %}
 
 {% block head_description %}
-  Search results:
+  搜索结果:
 {% endblock head_description %}
 
 {% block extra_css %}
@@ -31,7 +31,7 @@
 
 {% block top_center %}
   <h1>
-    Search Results
+    搜索结果:
   </h1>
 {% endblock %}
 
