--- a/templates/tag.html
+++ b/templates/tag.html
@@ -8,7 +8,7 @@
 
 {% block top_center %}
   <h1>
-    <a  href="{{ SITEURL }}/{{ tag.url }}" rel="bookmark" title="Permalink to {{ tag|e }} articles">{{ tag }} articles</a>
+    <a  href="{{ SITEURL }}/{{ tag.url }}" rel="bookmark" title="Permalink to {{ tag|e }} articles">{{ tag }}  随笔</a>
   </h1>
 {% endblock %}
 
