--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,13 +2,13 @@
 
 
 {% block title %}
-  All categories
+  所有分类
 {% endblock %}
 
 
 {% block top_center %}
   <h1>
-      <a href="{{ SITEURL }}/{{ CATEGORIES_SAVE_AS }}" rel="bookmark" title="Permalink to category list">Categories</a>
+      <a href="{{ SITEURL }}/{{ CATEGORIES_SAVE_AS }}" rel="bookmark" title="Permalink to category list">随笔分类</a>
   </h1>
 {% endblock %}
 
@@ -23,7 +23,7 @@
   <dl class="dl-horizontal">
     {% for category in all_categories|sort(reverse = True, attribute = 'articles') %}
       <dt><a href="{{ SITEURL }}/{{ category.url }}" class="label label-info">{{ category.name }}</a></dt>
-      <dd><a href="{{ SITEURL }}/{{ category.url }}">{{ category.articles }} article{{ 's' if category.articles > 1 else '' }}</a></dd>
+      <dd><a href="{{ SITEURL }}/{{ category.url }}">{{ category.articles }} 篇随笔{{ ' ' if category.articles > 1 else '' }}</a></dd>
     {% endfor %}
   </dl>
 
