--- a/templates/category.html
+++ b/templates/category.html
@@ -8,7 +8,7 @@
 
 {% block top_center %}
   <h1>
-    <a  href="{{ SITEURL }}/{{ category.url }}" rel="bookmark" title="Permalink to {{ category|e }} articles">{{ category }} articles</a>
+    <a  href="{{ SITEURL }}/{{ category.url }}" rel="bookmark" title="Permalink to {{ category|e }} articles">{{ category }} 随笔</a>
   </h1>
 {% endblock %}
 
