--- a/templates/authors.html
+++ b/templates/authors.html
@@ -23,7 +23,7 @@
   <dl class="dl-horizontal">
     {% for author in all_authors|sort(reverse = True, attribute = 'articles') %}
       <dt><a href="{{ SITEURL }}/{{ author.url }}" class="label label-info">{{ author.name }}</a></dt>
-      <dd><a href="{{ SITEURL }}/{{ author.url }}">{{ author.articles }} article{{ 's' if author.articles > 1 else '' }}</a></dd>
+      <dd><a href="{{ SITEURL }}/{{ author.url }}">{{ author.articles }} 篇随笔{{ ' ' if author.articles > 1 else '' }}</a></dd>
     {% endfor %}
   </dl>
 
