字体地址修改fonts.loli.net

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
     {% endif %}
 
     <!-- Fonts -->
-    <link href='//fonts.lug.ustc.edu.cn/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
-    <link href='//fonts.lug.ustc.edu.cn/css?family=Istok+Web' rel='stylesheet' type='text/css'/>
-    <link href='//fonts.lug.ustc.edu.cn/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'/>
+    <link href='//fonts.loli.net/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+    <link href='//fonts.loli.net/css?family=Istok+Web' rel='stylesheet' type='text/css'/>
+    <link href='//fonts.loli.net/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'/>
     {% if TYPOGRIFY %}
-      <link href='https://fonts.lug.ustc.edu.cn/css?family=Expletus+Sans' rel='stylesheet' type='text/css'>
+      <link href='//fonts.loli.net/css?family=Expletus+Sans' rel='stylesheet' type='text/css'>
     {% endif %}
 
     {% block extra_css %}{% endblock %}
